; ModuleID = '/home/carl/AnghaBench/postgres/src/port/extr_snprintf.c_fmtchar.c'
source_filename = "/home/carl/AnghaBench/postgres/src/port/extr_snprintf.c_fmtchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32*)* @fmtchar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fmtchar(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @compute_padlen(i32 %10, i32 1, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp sgt i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @dopr_outchmulti(i8 signext 32, i32 %16, i32* %17)
  store i32 0, i32* %9, align 4
  br label %19

19:                                               ; preds = %15, %4
  %20 = load i32, i32* %5, align 4
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @dopr_outch(i32 %20, i32* %21)
  %23 = load i32, i32* %9, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @trailing_pad(i32 %23, i32* %24)
  ret void
}

declare dso_local i32 @compute_padlen(i32, i32, i32) #1

declare dso_local i32 @dopr_outchmulti(i8 signext, i32, i32*) #1

declare dso_local i32 @dopr_outch(i32, i32*) #1

declare dso_local i32 @trailing_pad(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
